fix report link

--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -34,8 +34,8 @@
       <dd>{{ (index .Site.Data.bench $data).import_waitforasyncjobs_avg }}</dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim10massimport/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim10massimport/detail/">detail</a></dd>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim10massimport/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim10massimport/detail/">detail</a></dd>
     </dl>
 
     <h3>Create document using REST</h3>
@@ -51,8 +51,8 @@
       </dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim20createdocuments/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim20createdocuments/detail/">detail</a></dd>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim20createdocuments/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim20createdocuments/detail/">detail</a></dd>
     </dl>
 
     <h3>Navigation using REST</h3>
@@ -68,8 +68,8 @@
       </dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim30navigation/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim30navigation/detail/">detail</a>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim30navigation/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim30navigation/detail/">detail</a>
       </dd>
     </dl>
 
@@ -86,8 +86,8 @@
       </dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim30navigationjsf/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim30navigationjsf/detail/">detail</a>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim30navigationjsf/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim30navigationjsf/detail/">detail</a>
       </dd>
     </dl>
 
@@ -105,8 +105,8 @@
       </dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim30updatedocuments/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim30updatedocuments/detail/">detail</a>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim30updatedocuments/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim30updatedocuments/detail/">detail</a>
       </dd>
     </dl>
 
@@ -124,8 +124,8 @@
       </dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim50crud/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim50crud/detail/">detail</a>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim50crud/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim50crud/detail/">detail</a>
       </dd>
     </dl>
 
@@ -143,8 +143,8 @@
       </dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim50bench/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim50bench/detail/">detail</a>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim50bench/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim50bench/detail/">detail</a>
       </dd>
     </dl>
 
@@ -155,8 +155,8 @@
       <dd>{{ (index .Site.Data.bench $data).reindex_waitforasync_avg }}</dd>
       <dt>Reports</dt>
       <dd>
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim80reindexall/overview/">overview and monitoring</a>,
-        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}/archive/reports/sim80reindexall/detail/">detail</a>
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim80reindexall/overview/">overview and monitoring</a>,
+        <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).buildnumber }}/archive/reports/sim80reindexall/detail/">detail</a>
       </dd>
     </dl>
 
