add concurrency info

--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -49,6 +49,8 @@
         p50: {{ (index .Site.Data.bench $data).create_p50 }}<br>
         p95: {{ (index .Site.Data.bench $data).create_p95 }}
       </dd>
+      <dt>Concurrency</dt>
+      <dd>{{ (index .Site.Data.bench $data).create_user }}</dd>
       <dt>Reports</dt>
       <dd>
         <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim20createdocuments/overview/">overview and monitoring</a>,
@@ -66,6 +68,8 @@
       p50: {{ (index .Site.Data.bench $data).nav_p50 }}<br>
       p95: {{ (index .Site.Data.bench $data).nav_p95 }}
       </dd>
+      <dt>Concurrency</dt>
+      <dd>{{ (index .Site.Data.bench $data).nav_user }}</dd>
       <dt>Reports</dt>
       <dd>
         <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigation/overview/">overview and monitoring</a>,
@@ -84,6 +88,8 @@
         p50: {{ (index .Site.Data.bench $data).navjsf_p50 }}<br>
         p95: {{ (index .Site.Data.bench $data).navjsf_p95 }}
       </dd>
+      <dt>Concurrency</dt>
+      <dd>{{ (index .Site.Data.bench $data).navjsf_user }}</dd>
       <dt>Reports</dt>
       <dd>
         <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30navigationjsf/overview/">overview and monitoring</a>,
@@ -102,7 +108,8 @@
         p50: {{ (index .Site.Data.bench $data).update_p50 }}<br>
         p95: {{ (index .Site.Data.bench $data).update_p95 }}
       </dd>
-      </dd>
+      <dt>Concurrency</dt>
+      <dd>{{ (index .Site.Data.bench $data).update_user }}</dd>
       <dt>Reports</dt>
       <dd>
         <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim30updatedocuments/overview/">overview and monitoring</a>,
@@ -121,7 +128,8 @@
         p50: {{ (index .Site.Data.bench $data).crud_p50 }}<br>
         p95: {{ (index .Site.Data.bench $data).crud_p95 }}
       </dd>
-      </dd>
+      <dt>Concurrency</dt>
+      <dd>{{ (index .Site.Data.bench $data).crud_user }}</dd>
       <dt>Reports</dt>
       <dd>
         <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50crud/overview/">overview and monitoring</a>,
@@ -140,7 +148,8 @@
         p50: {{ (index .Site.Data.bench $data).bench_p50 }}<br>
         p95: {{ (index .Site.Data.bench $data).bench_p95 }}
       </dd>
-      </dd>
+      <dt>Concurrency</dt>
+      <dd>{{ (index .Site.Data.bench $data).bench_user }}</dd>
       <dt>Reports</dt>
       <dd>
         <a href="../../../build/{{ .Params.benchid }}/{{ .Params.dbprofile }}{{ (index .Site.Data.bench $data).build_number }}/archive/reports/sim50bench/overview/">overview and monitoring</a>,
