--- a/layouts/section/bench.html
+++ b/layouts/section/bench.html
@@ -15,7 +15,7 @@
         <th>Navigation req/s</th>
         <th>Update doc/s</th>
         <th>Read/Write req/s</th>
-        <th>Redindexing in ms</th>
+        <th>Re-indexing in ms</th>
         <th>Build</th>
       </thead>
       {{ range .Pages }}
