Add static page to describe infra

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,8 +6,20 @@
 <div class="content container">
   <div class="posts">
     <h1>Welcome to the Nuxeo Reference benchmark site</h1>
-    <div>Blah blah</div>
-    <div><a href="./bench">See the bench results</a></div>
+    <div>This is the Nuxeo reference benchmark site, tracing performance over Nuxeo releases.</div>
+    <div>
+      <ul>
+        <li>
+          <a href="./about/">About Nuxeo Benchmarks</a>
+        </li>
+        <li>
+          <a href="./infra/">Infrastructure</a>
+        </li>
+        <li>
+          <a href="./bench/">Benchmark results</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 
