--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -11,13 +11,13 @@
     <ul class="sidebar-nav">
 
       <li>
-        <a href="/about">About</a>
+        <a href="{{ .Site.BaseURL }}/about/">About</a>
       </li>
       <li>
-        <a href="/infra">Infrastructure</a>
+        <a href="{{ .Site.BaseURL }}/infra/">Infrastructure</a>
       </li>
       <li>
-        <a href="/bench/">Results</a>
+        <a href="{{ .Site.BaseURL }}/bench/">Results</a>
       </li>
     </ul>
     <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
