Order bench per profile in group

--- a/layouts/section/bench.html
+++ b/layouts/section/bench.html
@@ -18,7 +18,7 @@
         <th>Re-indexing in ms</th>
         <th>Build</th>
       </thead>
-      {{ range .Pages }}
+      {{ range .Pages.ByTitle }}
         {{ .Render "summary_row" }}
       {{ end }}
     </table>
