--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,13 +10,13 @@
     <div>
       <ul>
         <li>
-          <a href="{{ .Site.BaseURL }}/about/">About Nuxeo Benchmarks</a>
+          <a href="{{ .Site.BaseURL }}about/">About Nuxeo Benchmarks</a>
         </li>
         <li>
-          <a href="{{ .Site.BaseURL }}/infra/">Infrastructure</a>
+          <a href="{{ .Site.BaseURL }}infra/">Infrastructure</a>
         </li>
         <li>
-          <a href="{{ .Site.BaseURL }}/bench/">Benchmark results</a>
+          <a href="{{ .Site.BaseURL }}bench/">Benchmark results</a>
         </li>
       </ul>
     </div>
