--- a/layouts/section/bench.html
+++ b/layouts/section/bench.html
@@ -4,34 +4,43 @@
 {{ partial "sidebar.html" . }}
 
 <div class="content container">
+  <h1>Benchmarks results</h1>
   <ul class="posts">
     {{ range (.Data.Pages.GroupByParam "benchname").Reverse }}
     <h3>{{ .Key }}</h3>
-    <table>
+    <table class="result">
       <thead>
       <th>Profile</th>
-      <th class="rotate"><div><span>Import rps</span></div></th>
-      <th class="rotate"><div><span>Create rps</span></div></th>
-      <th class="rotate"><div><span>Create avg</span></div></th>
-      <th class="rotate"><div><span>Navigation rps</span></div></th>
-      <th class="rotate"><div><span>Navigation avg</span></div></th>
-      <th class="rotate"><div><span>Update rps</span></div></th>
-      <th class="rotate"><div><span>CRUD rps</span></div></th>
-      <th class="rotate"><div><span>Re-indexing in ms</span></div></th>
-      <th class="rotate"><div><span>Build</span></div></th>
+      <th>
+        <div><span>Import</span></div>
+      </th>
+      <th>
+        <div><span>Create</span></div>
+      </th>
+      <th>
+        <div><span>Navigation</span></div>
+      </th>
+      <th>
+        <div><span>Update</span></div>
+      </th>
+      <th>
+        <div><span>CRUD</span></div>
+      </th>
+      <th>
+        <div><span>Reindexing</span></div>
+      </th>
+      <th>
+        <div><span>Build</span></div>
+      </th>
       </thead>
+      <tbody>
       {{ range .Pages.ByTitle }}
       {{ .Render "summary_row" }}
       {{ end }}
+      </tbody>
     </table>
     {{ end }}
   </ul>
-  <dl>
-    <dt>rps</dt>
-    <dd>Requests per second or documents created per second</dd>
-    <dt>avg<dt>
-    <dd>Average response time in milli seconds with standard deviation</dd>
-  </dl>
 </div>
 </body>
 </html>
