--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -17,7 +17,12 @@
         <a href="{{ .Site.BaseURL }}infra/">Infrastructure</a>
       </li>
       <li>
-        <a href="{{ .Site.BaseURL }}bench/">Results</a>
+        Results
+        <ul>
+          <li><a href="{{ .Site.BaseURL }}milestone/">Milestones</a></li>
+          <li><a href="{{ .Site.BaseURL }}continuous/">Continuous</a></li>
+          <li><a href="{{ .Site.BaseURL }}misc/">Misc</a></li>
+        </ul>
       </li>
     </ul>
     <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{.Now.Format "2006"}}. All rights reserved. {{end}}</p>
