--- a/layouts/bench/single.html
+++ b/layouts/bench/single.html
@@ -1,5 +1,6 @@
 {{ partial "head.html" . }}
 <body class="{{ .Site.Params.themeColor }}">
+{{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
 {{ $data := .Params.dfile }}
 
