--- a/themes/hyde/layouts/_default/list.html
+++ b/themes/hyde/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ partial "head.html" . }}
 <body class="{{ .Site.Params.themeColor }}">
-
+{{ partial "header.html" . }}
 {{ partial "sidebar.html" . }}
 
   <div class="content container">
